# src/types/dto/admin/projects/get-projects-response.ts
@@ -1,6 +1,6 @@
 import { ProjectData } from "../../../models/project.js";
 
-/** Lo qu devuelve la API al listar proyectos de un departamento. */
+/** Lo que devuelve la API al listar proyectos de un departamento. */
 export type GetProjectsResponse = Array<
-    Pick<ProjectData, "id" | "department_id" | "group_id" | "name" | "is_active" | "created_at">
+  Pick<ProjectData, "id" | "department_id" | "group_id" | "name" | "is_active" | "created_at">
 >;
